--- a/src/components/FavoritePage/FavoritePage.scss
+++ b/src/components/FavoritePage/FavoritePage.scss
@@ -7,6 +7,9 @@
     margin-top: 40px;
     margin-bottom: 40px;
   }
+  &__empty {
+    margin: 90px 0;
+  }
 }
 
 @media screen and (max-width: 1100px) {
@@ -18,5 +21,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+}
+
+@media screen and (max-width: 620px) {
+  .favorite-page {
+    max-width: 300px;
   }
 }
