--- a/src/components/ProductSlider/ProductsSlider.scss
+++ b/src/components/ProductSlider/ProductsSlider.scss
@@ -68,3 +68,21 @@
     max-width: 700px;
   }
 }
+
+@media screen and (max-width: 620px) {
+  .productsSlider {
+    max-width: 300px;
+    &__cards {
+      margin-bottom: 15px;
+    }
+    &__header {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    &__article {
+      margin-bottom: 10px;
+      font-size: 26px;
+    }
+  }
+}
