--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,6 +1,6 @@
 @import "../../css_config/css_configuration.scss";
 
-header {
+.header {
   display: flex;
   justify-content: space-between;
   max-width: 1440px;
@@ -9,5 +9,14 @@ header {
   border: 1px solid $ElementsColor;
   &__nav {
     position: relative;
+  }
+  &__nav-logo {
+    display: inline-block;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .header__nav-logo {
+    display: none;
   }
 }
