--- a/src/components/header/SearchInput.scss
+++ b/src/components/header/SearchInput.scss
@@ -40,3 +40,12 @@
     }
   }
 }
+
+@media screen and (max-width: 620px) {
+  .search {
+    position: absolute;
+    top: 26px;
+    width: 200px;
+    left: -90px;
+  }
+}
