--- a/src/components/homePage/BigSlider/BigSlider.scss
+++ b/src/components/homePage/BigSlider/BigSlider.scss
@@ -84,13 +84,15 @@
   }
 
   .prev-button {
-    transform: translateX(-40px);
+    position: absolute;
     height: 232px;
+    left: -40px;
   }
 
   .next-button {
-    transform: translateX(-500px);
+    position: absolute;
     height: 232px;
+    left: 608px;
   }
 
   .slider {
@@ -99,6 +101,48 @@
       margin: auto;
       top: 10px;
       width: 16%;
+    }
+  }
+}
+
+@media screen and (max-width: 620px) {
+  .carousel {
+    position: relative;
+    width: 260px;
+    height: 90px;
+    &__block {
+      width: 260px;
+    }
+    &__img {
+      width: 260px;
+    }
+  }
+
+  .prev-button {
+    position: relative;
+    height: 20px;
+    top: 20px;
+    left: 0;
+    width: 40px;
+  }
+
+  .next-button {
+    position: relative;
+    height: 20px;
+    top: 20px;
+    left: 180px;
+    width: 40px;
+    z-index: 10;
+  }
+
+  .slider {
+    &-points {
+      display: flex;
+      justify-content: center;
+      position: relative;
+      margin: auto;
+      top: -138px;
+      width: 50%;
     }
   }
 }
