--- a/src/components/homePage/ShopByCategory.scss
+++ b/src/components/homePage/ShopByCategory.scss
@@ -68,3 +68,23 @@
     }
   }
 }
+
+@media screen and (max-width: 620px) {
+  .shopByCategory {
+    margin-bottom: 15px;
+    max-width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &__cards {
+      display: flex;
+      flex-direction: column;
+    }
+    &__article {
+      font-size: 26px;
+    }
+    &__card {
+      margin-right: 0;
+    }
+  }
+}
