--- a/src/components/itemPage/ItemPage.scss
+++ b/src/components/itemPage/ItemPage.scss
@@ -119,12 +119,16 @@
     border: none;
     width: 100px;
     height: 100px;
+    background-color: white;
   }
 }
 
 @media screen and (max-width: 1100px) {
   .item-page {
     max-width: 700px;
+    &-slider {
+      margin-top: 10px;
+    }
   }
 
   .other-block {
@@ -133,6 +137,52 @@
     }
     &__specification {
       width: 350px;
+    }
+  }
+}
+
+@media screen and (max-width: 620px) {
+
+  .back-link {
+    margin-top: 0;
+  }
+
+  .item-page {
+    max-width: 300px;
+  }
+
+  .main-block {
+    display: flex;
+    flex-direction: column;
+    &__img {
+      width: 300px;
+      & img {
+        width: 280px;
+      }
+    }
+  }
+
+  .item-description {
+    text-align: center;
+  }
+
+  .gallery {
+    display: flex;
+    flex-direction: row;
+    &__img {
+      width: 100%;
+      height: 70%;
+    }
+  }
+  .other-block {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-top: 10px;
+    &__description {
+      width: 300px;
+    }
+    &__specification {
+      width: 300px;
     }
   }
 }
