--- a/src/helpers/ErrorPage.scss
+++ b/src/helpers/ErrorPage.scss
@@ -13,7 +13,6 @@ $time-2: 120s;
 $time-3: 180s;
 $time-4: 200s;
 
-/* mixins */
 @function particles($max) {
   $val: 0 0 $color-particle;
   @for $i from 1 through $max {
@@ -111,13 +110,8 @@ $time-4: 200s;
 }
 
 .error-page-text {
-  color: #fff;
+  color: #ff1178e5;
   font-family: $BodyTextStyle;
-  -webkit-animation: neon1 1.5s ease-in-out infinite alternate;
-  -moz-animation: neon1 1.5s ease-in-out infinite alternate;
-  animation: neon1 1.5s ease-in-out infinite alternate;
-  transition: $TransitionDuration;
-  cursor: pointer;
 }
 
 .error-page-text:hover {
